# ddstl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: algorithm.h  iterator.h  memory.h  ops.h  queue.h  type_traits.h  utility.h  vector.h
include/algs/: comparison.h  heap.h  merge.h  minmax.h  modifying.h  nonmodifying.h  permutation.h  set.h
include/q/: pq.h
include/utilities/: forward.h  pair.h
test/: asan_testing.h  entry.cpp  test_allocator.h  test_macros.h  test_vector.cpp
test/algorithm/: test_adjacent_find.cpp  test_adjacent_find_pred.cpp  test_copy.cpp  test_count.cpp  test_count_if.cpp  test_find.cpp  test_find_first_of.cpp  test_find_if.cpp  test_find_if_not.cpp  test_find_if_of_pred.cpp  test_search.cpp  test_search_n.cpp  test_search_n_pred.cpp  test_search_pred.cpp
test/algorithms/alg.modifying.operations/alg.copy/: test_copy.cpp  test_copy_n.cpp
test/algorithms/alg.modifying.operations/alg.reverse/: reverse.pass.cpp
test/algorithms/alg.nonmodifying/alg.adjacent.find/: test_adjacent_find.cpp  test_adjacent_find_pred.cpp
test/algorithms/alg.nonmodifying/alg.count/: test_count.cpp  test_count_if.cpp
test/algorithms/alg.nonmodifying/alg.equal/: test_equal.cpp  test_equal_pred.cpp
test/algorithms/alg.nonmodifying/alg.find/: test_find.cpp  test_find_if.cpp  test_find_if_not.cpp
test/algorithms/alg.nonmodifying/alg.find.end/: test_find_end.cpp  test_find_end_pred.cpp
test/algorithms/alg.nonmodifying/alg.find.first.of/: test_find_first_of.cpp  test_find_first_of_pred.cpp
test/algorithms/alg.nonmodifying/alg.is_permutation/: test_is_permutation.cpp  test_is_permutation_pred.cpp
test/algorithms/alg.nonmodifying/alg.search/: test_search.cpp  test_search_n.cpp  test_search_n_pred.cpp  test_search_pred.cpp
test/algorithms/alg.sorting/: sortable_helpers.h
test/algorithms/alg.sorting/alg.heap.operations/is.heap/: is_heap.pass.cpp  is_heap_comp.pass.cpp
test/algorithms/alg.sorting/alg.heap.operations/make.heap/: make_heap.pass.cpp  make_heap_comp.pass.cpp
test/algorithms/alg.sorting/alg.heap.operations/pop.heap/: pop_heap.pass.cpp  pop_heap_comp.pass.cpp
test/algorithms/alg.sorting/alg.heap.operations/push.heap/: push_heap.pass.cpp  push_heap_comp.pass.cpp
test/algorithms/alg.sorting/alg.heap.operations/sort.heap/: sort_heap.pass.cpp  sort_heap_comp.pass.cpp
test/algorithms/alg.sorting/alg.lex.comparison/: test_lexicographical_compare.cpp  test_lexicographical_compare_pred.cpp
test/algorithms/alg.sorting/alg.merge/: merge.pass.cpp  merge_comp.pass.cpp
test/algorithms/alg.sorting/alg.min.max/: max.pass.cpp  max_comp.pass.cpp  max_element.pass.cpp  max_init_list.cpp  max_init_list_comp.pass.cpp  min.pass.cpp  min_comp.pass.cpp  min_element.pass.cpp  min_element_comp.pass.cpp  min_init_list.pass.cpp  min_init_list_comp.pass.cpp
test/algorithms/alg.sorting/alg.permutation.generators/: test_next_permutation.cpp  test_next_permutation_pred.cpp  test_prev_permutation.cpp  test_prev_permutation_pred.cpp
test/algorithms/alg.sorting/alg.set.operations/includes/: include.pass.cpp  includes_comp.pass.cpp
test/algorithms/alg.sorting/alg.set.operations/set.difference/: set_difference.pass.cpp  set_difference_comp.pass.cpp
test/algorithms/alg.sorting/alg.set.operations/set.intersection/: set_intersection.pass.cpp  set_intersection_comp.pass.cpp
test/algorithms/alg.sorting/alg.set.operations/set.symmetric.difference/: set_symmetric_difference.pass.cpp  set_symmetric_difference_comp.pass.cpp
test/algorithms/alg.sorting/alg.set.operations/set.union/: set_union.pass.cpp  set_union_comp.pass.cpp  set_union_move.pass.cpp
test/containers/: Emplaceable.h
test/containers/container.adaptors/priority.queue/: types.pass.cpp
test/containers/container.adaptors/priority.queue/priqueue.cons/: assign_copy.pass.cpp  assign_move.pass.cpp  ctor_comp.pass.cpp  ctor_comp_container.pass.cpp  ctor_comp_rcontainer.pass.cpp  ctor_copy.pass.cpp  ctor_default.pass.cpp  ctor_iter_iter.pass.cpp  ctor_iter_iter_comp.pass.cpp  ctor_iter_iter_comp_cont.pass.cpp  ctor_iter_iter_comp_rcont.pass.cpp  ctor_move.pass.cpp  dtor_noexcept.pass.cpp
test/containers/container.adaptors/priority.queue/priqueue.members/: emplace.pass.cpp  empty.pass.cpp  pop.pass.cpp  push.pass.cpp  push_rvalue.pass.cpp  size.pass.cpp  swap.pass.cpp  top.pass.cpp
test/iterator/: test_distance.cpp
test/iterators/iterator.primitives/iterator.operations/: test_advance.cpp  test_distance.cpp
test/support/: MoveOnly.h  archetypes.h  archetypes.ipp  asan_testing.h  deleter_types.cpp  deleter_types.h  min_allocator.cpp  min_allocator.h  test_allocator.cpp  test_allocator.h  test_convertible.h  test_iterators.h  test_workarounds.h  type_id.h  unique_ptr_test_helper.cpp  unique_ptr_test_helper.h  user_defined_integral.h
test/utilities/smartptr/unique.ptr/unique.ptr.class/: pointer_type.pass.cpp
test/utilities/smartptr/unique.ptr/unique.ptr.class/unique.ptr.asgn/: move.pass.cpp  move_convert.pass.cpp  nullptr.pass.cpp
test/utilities/utility/declval/: declval.pass.cpp
test/utilities/utility/forward/: test_forward.cpp  test_move.cpp  test_move_if_noexcept.cpp
test/utilities/utility/pairs/pairs.pair/: assign_const_pair_U_V.pass.cpp  assign_pair.pass.cpp  assign_rv_pair.pass.cpp  assign_rv_pair_U_V.pass.cpp  const_first_const_second.pass.cpp  copy_ctor.pass.cpp  default-sfinae.pass.cpp  default.pass.cpp  dtor.pass.cpp  move_ctor.pass.cpp  rv_pair_U_V.pass.cpp  special_member_generation_test.pass.cpp  trivial_copy_move.pass.cpp  types.pass.cpp
test/utilities/utility/pairs/pairs.spec/: make_pair.pass.cpp
test/utilities/utility/utility.swap/: test_swap.cpp
test/utility/: test_forward.cpp  test_move.cpp  test_move_if_noexcept.cpp
test/vector/: test_access.cpp  test_insert.cpp  test_push_back.cpp
